--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop",
+    "schema:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync",
     "docker:build": "docker build -f Dockerfile . -t name",
     "docker:start": "docker run -p 3000:3000 name",
     "docker:remove:all": "docker rmi $(docker images -a -q)",
