--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "jest --forceExit --passWithNoTests --detectOpenHandles",
+    "test:watch": "jest --watch --forceExit --passWithNoTests --detectOpenHandles",
+    "test:cov": "jest --coverage --forceExit --passWithNoTests --detectOpenHandles",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "docker:build": "docker build -f Dockerfile . -t name",
