--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start": "cross-env NODE_ENV=development nest start",
+    "start:dev": "cross-env NODE_ENV=development nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "jest --forceExit --passWithNoTests --detectOpenHandles",
+    "test:watch": "jest --watch --forceExit --passWithNoTests --detectOpenHandles",
+    "test:cov": "jest --coverage --forceExit --passWithNoTests --detectOpenHandles",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:build": "docker build -f Dockerfile . -t name",
+    "docker:start": "docker run -p 3000:3000 name",
+    "docker:remove:all": "docker rmi $(docker images -a -q)",
+    "lima:build": "lima nerdctl build -f Dockerfile . -t name",
+    "lima:start": "lima nerdctl run -p 3000:3000 name",
+    "lima:remove:all": "lima nerdctl rmi $(docker images -a -q)"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.7",
@@ -27,6 +33,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.1.4",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
+    "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -38,6 +47,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
@@ -55,7 +65,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.8.1",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5",
     "webpack": "^5.73.0",
