--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@nestjs/typeorm": "^8.1.4",
     "@types/passport-jwt": "^3.0.6",
     "axios": "^0.27.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "joi": "^17.6.0",
@@ -60,6 +62,7 @@
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.7.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
